SERVER-5384 segfault attempting mapreduce with --noscripting